<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp" >

        <EditText
            android:id="@+id/etQuestionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/question_text" />

        <EditText
            android:id="@+id/etAnswer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:layout_constraintTop_toBottomOf="@id/etQuestionText"
            android:hint="@string/answer_1" />

        <EditText
            android:id="@+id/etAnswer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:layout_constraintTop_toBottomOf="@id/etAnswer1"
            android:hint="@string/answer_2" />

        <EditText
            android:id="@+id/etAnswer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:layout_constraintTop_toBottomOf="@id/etAnswer2"
            android:hint="@string/answer_3" />

        <EditText
            android:id="@+id/etAnswer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:layout_constraintTop_toBottomOf="@id/etAnswer3"
            android:hint="@string/answer_4" />

        <RadioGroup
            android:id="@+id/rgCorrectAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAnswer4" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correct" />

            <RadioButton
                android:id="@+id/rbCorrectAnswer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="1" />

            <RadioButton
                android:id="@+id/rbCorrectAnswer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2" />

            <RadioButton
                android:id="@+id/rbCorrectAnswer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4" />

        </RadioGroup>

        <EditText
            android:id="@+id/etUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:layout_constraintTop_toBottomOf="@id/rgCorrectAnswer"
            android:hint="@string/url" />

        <Spinner
            android:id="@+id/spCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            style="@android:style/Widget.Spinner"
            android:background="@drawable/spinner_background"
            android:prompt="@string/category"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/etUrl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/spLevel"
            android:entries="@array/categories" />

        <Spinner
            android:id="@+id/spLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            style="@android:style/Widget.Spinner"
            android:background="@drawable/spinner_background"
            android:prompt="@string/level"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/etUrl"
            app:layout_constraintStart_toEndOf="@id/spCategory"
            app:layout_constraintEnd_toEndOf="parent"
            android:entries="@array/levels" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:padding="12dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/category_background"
            app:layout_constraintTop_toBottomOf="@id/spLevel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/save" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/btnSave"
            app:layout_constraintBottom_toBottomOf="@id/btnSave"
            app:layout_constraintStart_toStartOf="@id/btnSave"
            app:layout_constraintEnd_toEndOf="@id/btnSave" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>