<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_joker"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <ImageView
        android:id="@+id/iv1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:padding="20dp"
        android:src="@drawable/ic_fifty_percent"
        app:layout_constraintEnd_toStartOf="@id/iv2"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <ImageView
        android:id="@+id/iv1JokerUsed"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_joker_used"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/iv1"
        app:layout_constraintBottom_toBottomOf="@id/iv1"
        app:layout_constraintStart_toStartOf="@id/iv1"
        app:layout_constraintEnd_toEndOf="@id/iv1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_50"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="@+id/iv1"
        app:layout_constraintStart_toStartOf="@+id/iv1"
        app:layout_constraintTop_toBottomOf="@+id/iv1" />

    <ImageView
        android:id="@+id/iv2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:padding="20dp"
        android:src="@drawable/ic_skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <ImageView
        android:id="@+id/iv2JokerUsed"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_joker_used"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/iv2"
        app:layout_constraintBottom_toBottomOf="@id/iv2"
        app:layout_constraintStart_toStartOf="@id/iv2"
        app:layout_constraintEnd_toEndOf="@id/iv2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/skip"
        app:layout_constraintEnd_toEndOf="@+id/iv2"
        app:layout_constraintStart_toStartOf="@+id/iv2"
        app:layout_constraintTop_toBottomOf="@+id/iv2" />

    <ImageView
        android:id="@+id/iv3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:padding="20dp"
        android:src="@drawable/ic_swap"
        app:layout_constraintStart_toEndOf="@id/iv2"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <ImageView
        android:id="@+id/iv3JokerUsed"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_joker_used"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/iv3"
        app:layout_constraintBottom_toBottomOf="@id/iv3"
        app:layout_constraintStart_toStartOf="@id/iv3"
        app:layout_constraintEnd_toEndOf="@id/iv3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/swap"
        app:layout_constraintEnd_toEndOf="@+id/iv3"
        app:layout_constraintStart_toStartOf="@+id/iv3"
        app:layout_constraintTop_toBottomOf="@+id/iv3" />

</androidx.constraintlayout.widget.ConstraintLayout>